<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#007C3030"
	tools:context=".MainActivity">

	<TableLayout
		android:id="@+id/tableLayout"
		android:layout_width="wrap_content"
		android:layout_height="363dp"
		android:layout_marginTop="4dp"
		android:stretchColumns="0"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:visibility="visible">

			<EditText
				android:id="@+id/editTextInfoClass"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:ems="10"
				android:inputType="textPersonName"
				android:text="@string/servant_class"
				android:textStyle="bold" />

			<EditText
				android:id="@+id/editTextNpType"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:ems="10"
				android:inputType="textPersonName"
				android:lineSpacingExtra="-5sp"
				android:selectAllOnFocus="false"
				android:singleLine="false"
				android:text="NP Type"
				android:textStyle="bold"
				tools:visibility="visible" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_weight="0">

			<Spinner
				android:id="@+id/spinnerClass"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginStart="16dp"
				android:dropDownWidth="wrap_content"
				android:entries="@array/serventList"
				android:spinnerMode="dropdown"
				android:text="@string/servant_class" />

			<Spinner

				android:id="@+id/spinnerNpTyp"
				android:layout_width="146dp"
				android:layout_height="match_parent"
				android:entries="@array/npTypes"
				android:visibility="visible" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<EditText
				android:id="@+id/servantAtk"
				android:layout_width="174dp"
				android:layout_height="42dp"
				android:ems="10"
				android:hint="@string/servent_atk"
				android:inputType="number" />

			<EditText
				android:id="@+id/editTextNpDmgMulti"
				android:layout_width="184dp"
				android:layout_height="41dp"
				android:ems="10"
				android:hint="@string/servent_NpDamageMultiplier"
				android:inputType="number" />
		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="match_parent">

			<ImageView
				android:id="@+id/imageView2"
				android:layout_width="171dp"
				android:layout_height="36dp"
				app:srcCompat="@drawable/commandcard" />

			<ImageView
				android:id="@+id/imageView3"
				android:layout_width="35dp"
				android:layout_height="30dp"
				app:srcCompat="@drawable/npdamageup" />
		</TableRow>

		<TableRow
			android:layout_width="wrap_content"
			android:layout_height="match_parent">

			<EditText
				android:id="@+id/editTextCardMod"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:ems="10"
				android:hint="@string/card_mode"
				android:inputType="number" />

			<EditText
				android:id="@+id/editTextNpBuff"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:ems="10"
				android:hint="@string/np_buff"
				android:inputType="number" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<ImageView
				android:id="@+id/imageView4"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:srcCompat="@drawable/attackup" />

			<ImageView
				android:id="@+id/imageView5"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				app:srcCompat="@drawable/specialattackup" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<EditText
				android:id="@+id/editTextAtkBuff"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:ems="10"
				android:hint="@string/atk_buff"
				android:inputType="number" />

			<EditText
				android:id="@+id/editTextSpecialTraitBuff"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:ems="10"
				android:hint="@string/trait_buff"
				android:inputType="number"
				tools:layout_editor_absoluteX="330dp"
				tools:layout_editor_absoluteY="-6dp" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<EditText
				android:id="@+id/editText12"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:ems="10"
				android:inputType="textPersonName"
				android:text="Class Advantage"
				android:textStyle="bold" />

			<EditText
				android:id="@+id/editText13"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:ems="10"
				android:inputType="textPersonName"
				android:text="SKY/EARTH/MAN Advantage"
				android:textSize="14sp"
				android:textStyle="bold" />
		</TableRow>

		<TableRow
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<Spinner
				android:id="@+id/spinnerClassAdvantage"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:entries="@array/classAdvantage" />

			<Spinner
				android:id="@+id/spinnerAttrAdvantage"
				android:layout_width="195dp"
				android:layout_height="56dp"
				android:entries="@array/attrAdvantage" />
		</TableRow>
	</TableLayout>

	<Button
		android:id="@+id/button"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginBottom="112dp"
		android:onClick="sendMessage"
		android:text="@string/calculate"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.498"
		app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>
